6.2.0
[add] Context menu -> 'Play with subtitles' |contrib: solarus|
[add] Option to download subtitles before playback in Settings -> General -> Configure subtitles
[add] 'Settings -> Advanced -> Use YouTube website urls' for external/alternative players
            eg. Player: MPC-BE, URL: https://www.youtube.com/watch?v=C0NyvxTJGcQ
            eg. playercorefactory.xml
                <?xml version="1.0" encoding="UTF-8"?>
                <playercorefactory>
                    <players>
                        <player name="MPC-BE" type="ExternalPlayer" audio="false" video="true">
                            <filename>C:\Program Files\MPC-BE x64\mpc-be64.exe</filename>
                            <args>"{1}" /fullscreen /close</args>
                            <hidexbmc>true</hidexbmc>
                            <hideconsole>true</hideconsole>
                            <warpcursor>none</warpcursor>
                        </player>
                    </players>
                    <rules action="prepend">
                       <rule filename="(?:http)*s*:*[/]{0,2}(?:www\.)*youtu(?:\.be/|be\.com/(?:embed/|watch/|v/|.*?[?&/]v=))[a-zA-Z0-9_\-]{11}.*" player="MPC-BE" />
                    </rules>
                </playercorefactory>
[fix] Mark as watched in Kodi 18
[fix] Reported background progress dialog percentage
[fix] Playlist items, use video_items instead of playback_items
[upd] Improve speed of playback starting and resolver
            before: min: 1.5s max: 2.6s median: 1.7s
            after:  min: 0.9s max: 2.6s median: 1.2s
[chg] refactor logging and system version
[chg] Localize confirmation
[lang] es_es strings |contrib: roliverosc|
[lang] el_gr strings |contrib: twilight0|
[lang] nl_nl strings |contrib: Markman-B|

6.1.4
[fix] Signature function not found

6.1.3
[fix] timedelta.total_seconds python 2.6 compat.

6.1.2
[fix] dash settings check and defaults
[fix] addon-check raised warning for services complex entry point