@@ -16,6 +16,7 @@
 6.2.0
 [add] Context menu -> 'Play with subtitles' |contrib: solarus|
 [add] Option to download subtitles before playback in Settings -&gt; General -&gt; Configure subtitles
+[add] Refresh context menu to all videos/live streams
 [add] 'Settings -&gt; Advanced -&gt; Use YouTube website urls' for external/alternative players
             eg. Player: MPC-BE, URL: https://www.youtube.com/watch?v=C0NyvxTJGcQ
 [fix] Mark as watched in Kodi 18
