@@ -302,10 +302,8 @@ def update_video_infos(provider, context, video_id_dict, playlist_item_id_dict=N
         context_menu = []
         replace_context_menu = False
 
-        # Refresh ('My Subscriptions')
-        if context.get_path().startswith('/special/new_uploaded_videos_tv') or \
-                context.get_path().startswith('/channel/mine/playlist/'):
-            yt_context_menu.append_refresh(context_menu, provider, context)
+        # Refresh
+        yt_context_menu.append_refresh(context_menu, provider, context)
 
         # Queue Video
         yt_context_menu.append_queue_video(context_menu, provider, context)
